<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/todo_background_todo_app"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:hint="@string/todo_dialog_add_task"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/todo_subtitle_text" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/todo_business_category"
            android:checked="true"
            android:text="@string/todo_dialog_category_business"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/todo_personal_category"
            android:text="@string/todo_dialog_category_personal"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/todo_other_category"
            android:text="@string/todo_dialog_category_other"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_dialog_add_task_button"
        android:textAllCaps="true"
        android:backgroundTint="@color/todo_accent"/>

</androidx.appcompat.widget.LinearLayoutCompat>